Better CMake policy detection
- thanks to Rebecca Palmer for suggesting this!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 2.6.4)
 
 if(COMMAND cmake_policy)
-    if(${CMAKE_MAJOR_VERSION} GREATER 2) # version 3 or higher
-        cmake_policy(SET CMP0054 NEW)
-        cmake_policy(SET CMP0042 NEW)
-    endif()
+   if(POLICY CMP0054)
+       cmake_policy(SET CMP0054 NEW)
+   endif()
+   if(POLICY CMP0042)
+       cmake_policy(SET CMP0042 NEW)
+   endif()
 endif()
 
 include (CheckFunctionExists)
