Set RPATH on Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ include (CheckCXXCompilerFlag)
 set(CMAKE_OSX_DEPLOYMENT_TARGET 10.7)
 set(CMAKE_OSX_SYSROOT /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk)
 
+# only relevant for building shared libs but let's set it regardless
+set(CMAKE_OSX_RPATH 1)
+
 project(SimGear)
 
 # read 'version' file into a variable (stripping any newlines or spaces)
